# OS

./: CMakeLists.txt  README.md
another/: CMakeLists.txt  main.c
another/include/: parent.h  shrmem.h
another/src/: 1.txt  2.txt  child1_lab3  child1_lab3.c  child2_lab3.c  parent_lab3.c
cp/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
cp/include/: ListAllocator.hpp  N2Allocator.hpp
cp/src/: ListAllocator.cpp  N2Allocator.cpp
lab1/: CMakeLists.txt  main.c
lab1/include/: parent.h  utils.h
lab1/src/: child1.c  child2.c  parent.c  utils.c
lab2/: CMakeLists.txt  main.c
lab2/include/: lab2.h
lab2/src/: lab2.c
lab4/: CMakeLists.txt
lab4/include/: realization.h
lab4/src/: first_realization.c  program1.c  program2.c  second_realization.c
tests/: CMakeLists.txt  another_test.cpp  lab1_test.cpp  lab2_test.cpp  lab4_test1.cpp  lab4_test2.cpp
